--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -72,3 +72,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+ul, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
